tests/expectations/compiler/const_generics/const_generics_invalid_context_fail.out
Error [ETYC0372143]: Entry point functions cannot have generic const parameters.
    --> compiler-test:2:8
     |
   2 |     fn iface_fn::[N: u32](x: u32) -> u32;
     |        ^^^^^^^^
Error [ETYC0372143]: Entry point functions cannot have generic const parameters.
    --> compiler-test:19:8
     |
  19 |     fn bar1::[N: u32]() {}
     |        ^^^^
Error [ETYC0372143]: Entry point functions cannot have generic const parameters.
    --> compiler-test:21:8
     |
  21 |     fn bar2::[N: u32]() -> Final {
     |        ^^^^
Error [ETYC0372143]: Functions annotated with `@no_inline` cannot have generic const parameters.
    --> compiler-test:6:4
     |
   6 | fn foo1::[N: u32](x: u32) -> u32 {
     |    ^^^^
Error [ETYC0372143]: `final fn` functions cannot have generic const parameters.
    --> compiler-test:10:10
     |
  10 | final fn foo2::[N: u32](x: u32) {}
     |          ^^^^
